[gd_scene load_steps=11 format=3 uid="uid://donqwnq58twjw"]

[ext_resource type="PackedScene" uid="uid://bj0n4kvfagpx3" path="res://enemy/boss/boss_enemy.tscn" id="1_aqoba"]
[ext_resource type="Script" path="res://enemy/boss/jim_and_jam/jim_and_jam.gd" id="2_8xvub"]
[ext_resource type="Texture2D" uid="uid://cjgy6kktvhyt6" path="res://assets/boss_sprites/JimAndJam_IdleAnimation.png" id="3_6dntp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_wenvs"]
size = Vector3(4.90515, 7.1217, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_c51g8"]
size = Vector3(2.1001, 3.48242, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7pa8"]
atlas = ExtResource("3_6dntp")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_w33px"]
atlas = ExtResource("3_6dntp")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_udeh6"]
atlas = ExtResource("3_6dntp")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvcst"]
atlas = ExtResource("3_6dntp")
region = Rect2(240, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_mvvin"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7pa8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w33px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udeh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvcst")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="JimAndJam" instance=ExtResource("1_aqoba")]
script = ExtResource("2_8xvub")

[node name="Hurtbox" parent="." index="0" node_paths=PackedStringArray("hurtbox_owner")]
hurtbox_owner = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.16559, 3.06085, 0)
shape = SubResource("BoxShape3D_wenvs")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Hurtbox" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.60253, 1.24121, 0)
shape = SubResource("BoxShape3D_c51g8")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="." index="1"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 3, 0)
billboard = 2
double_sided = false
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_mvvin")
autoplay = "default"
frame = 3
frame_progress = 0.512653

[node name="HammerAttackTimer" type="Timer" parent="." index="2"]
wait_time = 1.5

[node name="DecisionTimer" type="Timer" parent="." index="3"]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="HammerAttackTimer" to="." method="_on_hammer_attack_timer_timeout"]
[connection signal="timeout" from="DecisionTimer" to="." method="_on_decision_timer_timeout"]
